--- a/package.json
+++ b/package.json
@@ -7,25 +7,43 @@
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@storybook/addon-actions": "^6.5.0-alpha.60",
+    "@storybook/addon-essentials": "^6.5.0-alpha.60",
+    "@storybook/addon-interactions": "^6.5.0-alpha.60",
+    "@storybook/addon-links": "^6.5.0-alpha.60",
+    "@storybook/builder-vite": "^0.1.26",
+    "@storybook/react": "^6.5.0-alpha.60",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-loader": "^8.2.4",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.8",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
+    "storybook-builder-vite": "^0.1.23",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
+  },
+  "volta": {
+    "node": "16.14.2",
+    "npm": "8.6.0"
   }
 }
