--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "scripts": {
     "build": "tsc && vite build",
+    "build-storybook": "build-storybook",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "serve": "vite preview",
+    "serve-https": "serve dist",
+    "storybook": "start-storybook -p 6006"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -35,12 +37,14 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.8",
+    "https-localhost": "^4.7.1",
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "storybook-builder-vite": "^0.1.23",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-plugin-pwa": "^0.11.13"
   },
   "volta": {
     "node": "16.14.2",
