--- a/package.json
+++ b/package.json
@@ -6,36 +6,34 @@
     "build": "tsc && vite build",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "generate-barrels": "barrelsby -c ./.barrelsbyrc.json",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
     "serve": "vite preview",
     "serve-https": "serve dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@mdx-js/react": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.5",
-    "styled-react-modal": "^3.0.0"
+    "styled-react-modal": "^3.0.0",
+    "theme-ui": "^0.14.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@types/styled-components": "^5.1.25",
     "@types/styled-react-modal": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^1.0.7",
-    "babel-loader": "^8.2.4",
-    "babel-plugin-styled-components": "^2.0.7",
+    "barrelsby": "^2.3.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "https-localhost": "^4.7.1",
     "jest": "^27.5.1",
-    "jest-styled-components": "^7.0.8",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "typescript": "^4.5.4",
