--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "barrels": "barrelsby -c ./.barrelsbyrc.json",
     "build": "tsc && vite build",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "generate-barrels": "barrelsby -c ./.barrelsbyrc.json",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
     "serve": "vite preview",
@@ -15,8 +15,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@mdx-js/react": "^2.1.1",
+    "@theme-ui/presets": "^0.14.2",
+    "jotai": "^1.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "styled-react-modal": "^3.0.0",
     "theme-ui": "^0.14.2"
   },
