--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@mdx-js/react": "^2.1.1",
+    "@projectstorm/react-diagrams": "^6.7.0",
     "@theme-ui/presets": "^0.14.2",
     "jotai": "^1.6.3",
     "react": "^17.0.2",
