--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "barrels": "barrelsby -c ./.barrelsbyrc.json",
-    "build": "tsc && vite build",
+    "build": "npm run barrels && tsc && vite build",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
@@ -13,10 +13,13 @@
     "serve-https": "serve dist"
   },
   "dependencies": {
+    "@emotion/css": "^11.9.0",
     "@emotion/react": "^11.9.0",
     "@mdx-js/react": "^2.1.1",
     "@projectstorm/react-diagrams": "^6.7.0",
     "@theme-ui/presets": "^0.14.2",
+    "@tiptap/react": "^2.0.0-beta.108",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
     "jotai": "^1.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
