setup: add internationalization with LinguiJS

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "npm run barrels && tsc && vite build",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "i18n": "npm run i18n:extract && i18n:compile",
+    "i18n:extract": "lingui extract",
+    "i18n:compile": "lingui compile",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
     "serve": "vite preview",
@@ -28,12 +31,19 @@
     "theme-ui": "^0.14.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@lingui/cli": "^3.13.2",
+    "@lingui/core": "^3.13.2",
+    "@lingui/macro": "^3.13.2",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-react-modal": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-plugin-macros": "^3.1.0",
     "barrelsby": "^2.3.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
