--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "barrels": "barrelsby -c ./.barrelsbyrc.json",
     "build": "npm run barrels && tsc && vite build",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "i18n": "npm run i18n:extract && i18n:compile",
+    "i18n": "npm run i18n:extract && npm run i18n:compile",
     "i18n:extract": "lingui extract",
-    "i18n:compile": "lingui compile",
+    "i18n:compile": "lingui compile --strict --typescript",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
     "serve": "vite preview",
