setup: refactor theme and add import lint rules

--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@types/react-dom": "^17.0.10",
     "@types/styled-react-modal": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-plugin-macros": "^3.1.0",
     "barrelsby": "^2.3.3",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "https-localhost": "^4.7.1",
