--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "styled-react-modal": "^3.0.0",
-    "theme-ui": "^0.14.2"
+    "theme-ui": "^0.14.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -39,6 +40,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-react-modal": "^1.2.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^1.0.7",
