setup: working cypress integration test. todo: fix build/serve

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "build": "tsc && vite build",
+    "cy:start": "npm start && wait-on http-get://localhost:3001",
+    "cy:open": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
+    "cy:run": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "i18n": "npm run i18n:extract && npm run i18n:compile",
@@ -11,7 +14,7 @@
     "i18n:compile": "lingui compile --strict --typescript",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
-    "serve": "vite preview",
+    "serve": "vite build && vite preview",
     "serve-https": "serve dist",
     "test": "vitest"
   },
@@ -36,6 +39,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@cypress/vite-dev-server": "^2.2.2",
     "@lingui/cli": "^3.13.2",
     "@lingui/core": "^3.13.2",
     "@lingui/macro": "^3.13.2",
@@ -49,6 +53,7 @@
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-plugin-macros": "^3.1.0",
+    "cypress": "^9.6.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -59,6 +64,7 @@
     "jsdom": "^19.0.0",
     "make-plural": "^7.1.0",
     "prettier": "^2.6.2",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vite-plugin-pwa": "^0.11.13",
