wip: add vitest but theme-ui/mdx causes import problems

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "preview": "vite preview",
     "serve": "vite preview",
-    "serve-https": "serve dist"
+    "serve-https": "serve dist",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/css": "^11.9.0",
@@ -36,6 +37,10 @@
     "@lingui/cli": "^3.13.2",
     "@lingui/core": "^3.13.2",
     "@lingui/macro": "^3.13.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.1.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-react-modal": "^1.2.2",
@@ -52,12 +57,14 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "https-localhost": "^4.7.1",
     "jest": "^27.5.1",
+    "jsdom": "^19.0.0",
     "make-plural": "^7.1.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
-    "vite-plugin-pwa": "^0.11.13"
+    "vite-plugin-pwa": "^0.11.13",
+    "vitest": "^0.10.5"
   },
   "volta": {
     "node": "16.14.2",
