--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -3,7 +3,7 @@
 name: Build using Node.js
 on:
   push:
-    branches: [trunk]
+    branches: [all]
   pull_request:
     branches: [trunk]
 jobs:
@@ -23,3 +23,4 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
+      - run: npm run test
