--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -5,17 +5,14 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build using Node
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    name: Build Fi-Writer
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Node packages
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '18.x'
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
