--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -1,6 +1,6 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, and build the source code across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-name: Build using Node.js
+name: Build
 on: [push]
 jobs:
   build:
@@ -9,11 +9,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Node packages
+      - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm run test
+      - name: Install packages
+        run: npm ci
+      - name: Build project
+        run: npm run build --if-present
