--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Fi-Writer
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v3
