--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -11,6 +11,7 @@ jobs:
   vitest:
     runs-on: ubuntu-latest
     name: Vitest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v3
