--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "build": "npm run clean && tsc && vite build",
     "clean": "rm -rf dist/",
-    "cert": "rm -rf .cert && mkdir -p .cert && mkcert -key-file ./.cert/key.pem -cert-file ./.cert/cert.pem 'localhost'",
     "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
     "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
     "dev": "vite",
@@ -69,6 +68,7 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
+    "vite-plugin-mkcert": "^1.6.0",
     "vite-plugin-pwa": "^0.11.13",
     "vitest": "^0.10.5"
   },
