--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vite-plugin-pwa": "^0.11.13",
-    "vitest": "^0.10.5"
+    "vitest": "^0.10.5",
+    "workbox-window": "^6.5.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write",
