--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ NODE_VERSION = "16"
 
 [build]
 publish = "dist"
-command = "npm i && npm run build"
+command = "npx npm i && npx npm run build"
 
 [[redirects]]
 from   = "/*"
