--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build.environment]
-NPM_FLAGS    = "--prefix=/dev/null"
-NODE_VERSION = "16"
+NODE_VERSION = "18"
 
 [build]
 publish = "dist"
-command = "npx npm i && npx npm run build"
+command = "npm run build"
 
 [[redirects]]
 from   = "/*"
