--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run clean && tsc && vite build",
+    "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true vite build",
+    "build:report": "npm run clean && rm -f build.log && tsc && vite build 2> build.log && echo '\nBuild log available in the ./build.log file'",
     "clean": "rm -rf dist/",
     "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
     "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
-    "dev": "vite",
+    "dev": "cross-env SW_DEV=true vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "i18n": "npm run i18n:extract && npm run i18n:compile",
     "i18n:extract": "lingui extract",
@@ -31,6 +32,7 @@
     "jotai": "^1.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0"
   },
@@ -42,6 +44,7 @@
     "@lingui/cli": "^3.13.2",
     "@lingui/core": "^3.13.2",
     "@lingui/macro": "^3.13.2",
+    "@rollup/plugin-replace": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.0",
@@ -52,6 +55,7 @@
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-plugin-macros": "^3.1.0",
+    "cross-env": "^7.0.3",
     "cypress": "^9.6.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -65,6 +69,7 @@
     "lint-staged": "^12.4.1",
     "make-plural": "^7.1.0",
     "prettier": "^2.6.2",
+    "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
