--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Local project files and folders
+dev-dist
 dist
 dist-ssr
+node_modules
 *.local
 
 # Editor directories and files
@@ -24,4 +26,3 @@ dist-ssr
 *.sw?
 
 # Project
-dev-dist
