--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "scripts": {
     "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true vite build",
-    "build:report": "npm run clean && rm -f build.log && tsc && vite build 2> build.log && echo '\nBuild log available in the ./build.log file'",
-    "clean": "rm -rf dist/",
+    "clean": "rm -rf dev-dist/ dist/",
     "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
     "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
-    "dev": "cross-env SW_DEV=true vite",
+    "dev": "npm run clean && cross-env SW_DEV=true vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "i18n": "npm run i18n:extract && npm run i18n:compile",
     "i18n:extract": "lingui extract",
@@ -16,7 +15,7 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky install",
     "preview": "vite preview",
-    "serve": "vite build && vite preview",
+    "serve": "npm run build && vite preview",
     "test": "npm run vitest && npm run cy",
     "vitest": "vitest run"
   },
@@ -26,55 +25,54 @@
     "@theme-ui/components": "^0.14.5",
     "@theme-ui/core": "^0.14.5",
     "@theme-ui/css": "^0.14.5",
-    "@theme-ui/presets": "^0.14.2",
-    "@tiptap/react": "^2.0.0-beta.108",
-    "@tiptap/starter-kit": "^2.0.0-beta.183",
-    "jotai": "^1.6.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@theme-ui/presets": "^0.14.5",
+    "@tiptap/react": "^2.0.0-beta.109",
+    "@tiptap/starter-kit": "^2.0.0-beta.185",
+    "jotai": "^1.6.7",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@cypress/vite-dev-server": "^2.2.2",
-    "@lingui/cli": "^3.13.2",
-    "@lingui/core": "^3.13.2",
-    "@lingui/macro": "^3.13.2",
+    "@babel/core": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@cypress/vite-dev-server": "^2.2.3",
+    "@lingui/cli": "^3.13.3",
+    "@lingui/core": "^3.13.3",
+    "@lingui/macro": "^3.13.3",
     "@rollup/plugin-replace": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "babel-plugin-macros": "^3.1.0",
     "cross-env": "^7.0.3",
-    "cypress": "^9.6.0",
-    "eslint": "^8.13.0",
+    "cypress": "^9.6.1",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "https-localhost": "^4.7.1",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.4.1",
     "make-plural": "^7.1.0",
     "prettier": "^2.6.2",
     "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "vite-plugin-pwa": "^0.11.13",
-    "vitest": "^0.10.5",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9",
+    "vite-plugin-pwa": "^0.12.0",
+    "vitest": "^0.12.6",
     "workbox-window": "^6.5.3"
   },
   "lint-staged": {
