feat(webworker): add assets to pre-cache and update every 20s

--- a/src/service-worker/tsconfig.json
+++ b/src/service-worker/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "lib": ["WebWorker", "ESNext"],
   },
-  "files": ["./useServiceWorkerPrompt.tsx", "./service-worker.ts"],
+  "files": ["./sw.ts", "./hooks/useServiceWorkerPrompt.tsx"],
 }
