--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true vite build",
+    "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true RELOAD_SW=true vite build",
     "clean": "rm -rf dev-dist/ dist/",
     "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
     "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
