feat: implement PWA webworkers (#23)
* feat: add netlify configuration for pwa

* fix: use npx for build

* feat: update netlify build command

* setup(pwa): add prototype prompts on offline ready

* feat(webworker): move toaster in App

* feat(webworker): update npm packages and webworker config

* feat(webworker): add assets to pre-cache and update every 20s

* chore(tests): trying to fix the cypress plugin file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,17 +16,14 @@
       "~/*": ["./src/*"],
     },
     "resolveJsonModule": true,
-    // * Skip lib checking for react diagrams because of errors
     "skipLibCheck": true,
     "strict": true,
-    // * Must had strict null checks to false because our brick return PortModel | null
-    // * And library accepts only PortModel
-    "strictNullChecks": true,
     "target": "ESNext",
-    "types": ["vitest/globals"],
+    "types": ["vite-plugin-pwa/client", "vitest/globals"],
     "useDefineForClassFields": true,
   },
-  "include": ["src"],
+  "include": ["./src"],
+  "exclude": ["./src/service-worker"],
   "references": [{
     "path": "./tsconfig.node.json"
   }]
