setup: switch github actions from npm to pnpm

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -2,7 +2,8 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 name: Build
 
-on: [push]
+on: 
+  [push]
 
 jobs:
 
@@ -19,10 +20,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - name: Install packages
-        run: npm ci
+      - name: Install pnpm and packages
+        uses: pnpm/action-setup@v2.0.1
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: true
 
       - name: Build project
         run: npm run build --if-present
