--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,15 +24,19 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - name: Install packages
-        run: npm ci
+      - name: Install pnpm and packages
+        uses: pnpm/action-setup@v2.0.1
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: true
 
       - name: Run tests with dev server
         uses: cypress-io/github-action@v2
         with:
-          start: npm run dev
+          start: pnpm dev
           wait-on: 'http://localhost:3001'
           wait-on-timeout: 120
         env:
