--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true RELOAD_SW=true vite build",
+    "build": "pnpm clean && tsc && cross-env SOURCE_MAP=true SW=true RELOAD_SW=true vite build",
     "clean": "del-cli dev-dist dist",
-    "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
-    "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
-    "dev": "npm run clean && cross-env SW_DEV=true vite",
+    "dev": "pnpm clean && cross-env SW_DEV=true vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "i18n": "npm run i18n:extract && npm run i18n:compile",
+    "i18n": "pnpm i18n:extract && pnpm i18n:compile",
     "i18n:extract": "lingui extract",
     "i18n:compile": "lingui compile --strict --typescript",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky install",
     "preview": "vite preview",
-    "serve": "npm run build && vite preview",
-    "test": "npm run vitest && npm run cy",
-    "vitest": "vitest run"
+    "serve": "pnpm build && pnpm preview",
+    "test": "pnpm test:unit && pnpm test:e2e",
+    "test:e2e": "start-server-and-test 'pnpm dev' http-get://localhost:3001 'cypress run'",
+    "test:e2e-ui": "start-server-and-test 'pnpm dev' http-get://localhost:3001 'cypress open'",
+    "test:unit": "vitest run"
   },
   "dependencies": {
     "@emotion/css": "^11.9.0",
