--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,18 +20,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.0.1
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
       - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           cache: 'pnpm'
 
-      - name: Install pnpm and packages
-        uses: pnpm/action-setup@v2.0.1
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: true
+      - name: Install packages
+        run: pnpm install
 
       - name: Run tests with dev server
         uses: cypress-io/github-action@v2
