--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -5,6 +5,10 @@ name: Build
 on: 
   [push]
 
+env: 
+  # The cache folder changes depending on the OS. We need to fix that to cache the Cypress binary
+  CYPRESS_CACHE_FOLDER: '~/.cache/Cypress'
+
 jobs:
 
   build:
@@ -15,6 +19,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Cache Cypress binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache
+          key: ${{ runner.os }}-cypress
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2.0.1
