--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [trunk]
 
+env: 
+  CYPRESS_CACHE_FOLDER: '~/.cache/Cypress'
+
 jobs:
 
   vitest:
@@ -19,6 +22,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Cache Cypress binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache
+          key: ${{ runner.os }}-cypress
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2.0.1
