--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/Cypress
-          key: cypress-${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.json') }
+          key: cypress-${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.json') }}
           restore-keys: |
             cypress-${{ runner.os }}-cypress-
 
