--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -2,31 +2,20 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 name: Build
 
-on: 
-  [push]
+on: [push]
 
-env: 
+env:
   # The cache folder changes depending on the OS. We need to fix that to cache the Cypress binary
   CYPRESS_CACHE_FOLDER: '~/.cache/Cypress'
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     name: Build Fi-Writer
     timeout-minutes: 10
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Cache Cypress binary
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/Cypress
-          key: cypress-${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.json') }}
-          restore-keys: |
-            cypress-${{ runner.os }}-cypress-
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2.0.1
@@ -43,6 +32,14 @@ jobs:
 
       - name: Install packages
         run: pnpm install
+
+      - name: Cache Cypress binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.json') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-cypress-
 
       - name: Build project
         run: npm run build --if-present
