fix(ci/cd): fix Cypress install

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -9,9 +9,6 @@ on:
   pull_request:
     branches: [trunk]
 
-env:
-  CYPRESS_CACHE_FOLDER: '~/.cache/Cypress'
-
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -39,13 +36,8 @@ jobs:
       - name: Install packages
         run: pnpm install
 
-      - name: Cache Cypress binary
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/Cypress
-          key: cypress-${{ runner.os }}-cypress-${{ hashFiles('**/pnpm-lock.json') }}
-          restore-keys: |
-            cypress-${{ runner.os }}-cypress-
+      - name: Install Cypress binary
+        run: pnpm cypress install
 
       - name: Run tests with dev server
         uses: cypress-io/github-action@v2
