--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install packages
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Build project
         run: npm run build --if-present
