fix(ci/cd): revert vite-dev-server to 2.2.2

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 'lts/*'
+          node-version: '18.x'
           cache: 'pnpm'
 
       - name: Install packages
