setup(ci/cd): fix netlify deploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@ NPM_FLAGS    = "--version" # prevent Netlify npm install
 
 [build]
 publish = "dist"
-command = "npx pnpm i --store=node_modules/.pnpm-store --frozen-lockfile && pnpm build"
+command = "npx pnpm i --store=node_modules/.pnpm-store --frozen-lockfile && npx pnpm build"
 
 
 [[redirects]]
