--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -5,24 +5,29 @@ name: Build
 on: [push]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     name: Build Fi-Writer
     timeout-minutes: 10
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.0.1
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
 
       - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install packages
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build project
         run: npm run build --if-present
