--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "npm run clean && tsc && cross-env SOURCE_MAP=true SW=true RELOAD_SW=true vite build",
-    "clean": "rm -rf dev-dist/ dist/",
-    "cy": "start-server-and-test dev http-get://localhost:3001 'cypress run'",
-    "cy:ui": "start-server-and-test dev http-get://localhost:3001 'cypress open'",
-    "dev": "npm run clean && cross-env SW_DEV=true vite",
+    "build": "pnpm clean && tsc && cross-env SOURCE_MAP=true SW=true RELOAD_SW=true vite build",
+    "clean": "del-cli dev-dist dist",
+    "dev": "pnpm clean && cross-env SW_DEV=true vite",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "i18n": "npm run i18n:extract && npm run i18n:compile",
+    "i18n": "pnpm i18n:extract && pnpm i18n:compile",
     "i18n:extract": "lingui extract",
     "i18n:compile": "lingui compile --strict --typescript",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky install",
     "preview": "vite preview",
-    "serve": "npm run build && vite preview",
-    "test": "npm run vitest && npm run cy",
-    "vitest": "vitest run"
+    "serve": "pnpm build && pnpm preview",
+    "test": "pnpm test:unit && pnpm test:e2e",
+    "test:e2e": "start-server-and-test 'pnpm dev' http-get://localhost:3001 'cypress run'",
+    "test:e2e-ui": "start-server-and-test 'pnpm dev' http-get://localhost:3001 'cypress open'",
+    "test:unit": "vitest run"
   },
   "dependencies": {
     "@emotion/css": "^11.9.0",
+    "@emotion/react": "^11.9.0",
     "@theme-ui/color-modes": "^0.14.5",
     "@theme-ui/components": "^0.14.5",
     "@theme-ui/core": "^0.14.5",
     "@theme-ui/css": "^0.14.5",
     "@theme-ui/presets": "^0.14.5",
-    "@tiptap/react": "^2.0.0-beta.109",
-    "@tiptap/starter-kit": "^2.0.0-beta.185",
+    "@tiptap/core": "^2.0.0-beta.176",
+    "@tiptap/react": "2.0.0-beta.109",
+    "@tiptap/starter-kit": "2.0.0-beta.185",
     "jotai": "^1.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -36,27 +38,32 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.12",
+    "@babel/core": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@cypress/vite-dev-server": "2.2.2",
     "@lingui/cli": "^3.13.3",
     "@lingui/core": "^3.13.3",
     "@lingui/macro": "^3.13.3",
+    "@lingui/react": "^3.13.3",
     "@rollup/plugin-replace": "^4.0.0",
+    "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@types/react-dom": "^18.0.5",
+    "@types/testing-library__jest-dom": "^5.14.3",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.2",
     "babel-plugin-macros": "^3.1.0",
     "cross-env": "^7.0.3",
-    "cypress": "^9.6.1",
-    "eslint": "^8.15.0",
+    "csstype": "^3.1.0",
+    "cypress": "^9.7.0",
+    "del-cli": "^4.0.1",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
@@ -65,15 +72,20 @@
     "https-localhost": "^4.7.1",
     "husky": "^8.0.1",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^12.4.2",
     "make-plural": "^7.1.0",
     "prettier": "^2.6.2",
+    "rollup": "^2.74.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.7.2",
     "vite": "^2.9.9",
     "vite-plugin-pwa": "^0.12.0",
-    "vitest": "^0.12.6",
+    "vitest": "^0.12.9",
+    "workbox-core": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
     "workbox-window": "^6.5.3"
   },
   "lint-staged": {
