--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "vis-network": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
