--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.7.2",
     "vite": "^2.9.9",
+    "vite-plugin-mkcert": "^1.7.1",
     "vite-plugin-pwa": "^0.12.0",
     "vitest": "^0.12.9",
     "workbox-core": "^6.5.3",
